fix after rewiw, add dynamic programs fetch

--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,8 @@
       <div class="hero-overlay bg-opacity-60"></div>
       <div class="hero-content text-center text-neutral-content">
         <div class="max-w-md">
-          <h1 class="mb-5 text-5xl font-bold text-accent">Classical Hatha Yoga</h1>
+          <div class="h-40"></div>
+          <h1 class="mb-5 pt-10 text-5xl font-bold text-accent">Classical Hatha Yoga</h1>
           <p class="mb-5">
             Classical Hatha Yoga designed by Sadhguru. We are based in United States and Ukraine.
           </p>
@@ -111,9 +112,9 @@
       <div class="carousel">
         <div class="carousel-item">
           <img src="/img/ua-studio6.avif" alt="UA Studio" class="mx-1 h-80 rounded-3xl" />
-          <img src="/img/ua-studio3.avif" alt="UA Studio" class="mx-1 h-80 rounded-3xl" />
-          <img src="/img/ua-studio1.avif" alt="UA Studio" class="mx-1 h-80 rounded-3xl" />
-          <img src="/img/ua-studio4.avif" alt="UA Studio" class="mx-1 h-80 rounded-3xl" />
+          <img src="/img/ua-studio7.avif" alt="UA Studio" class="mx-1 h-80 rounded-3xl" />
+          <img src="/img/ua-studio8.avif" alt="UA Studio" class="mx-1 h-80 rounded-3xl" />
+          <img src="/img/ua-studio9.avif" alt="UA Studio" class="mx-1 h-80 rounded-3xl" />
           <img src="/img/ua-studio2.avif" alt="UA Studio" class="mx-1 h-80 rounded-3xl" />
         </div>
       </div>
@@ -128,80 +129,7 @@
     <div class="bg-base-100 px-6 py-12">
       <h1 class="pb-6 text-5xl font-bold" id="schedule">Upcoming Programs</h1>
       <div class="text-center" id="programs">
-        <div class="inline-block">
-          <div class="class-card card">
-            <figure>
-              <img src="/img/surya-kriya-card.avif" alt="Surya Kriya" />
-            </figure>
-            <div class="card-body p-4">
-              <h2 class="card-title">Surya Kriya</h2>
-              <p>(2 sessions) March 2-3 10:00-13:00 UTC</p>
-              <p>
-                <a href="https://maps.app.goo.gl/rq1rjnd7psr4oNZh6" class="link" target="_blank">
-                  Unnamed Road, Lybokhora, Lviv Oblast, Ukraine, 82633
-                </a>
-              </p>
-              <p>
-                <b>$ 100</b>
-                , incl. online support
-              </p>
-              <div class="card-actions justify-start">
-                <button class="btn btn-accent" onclick="modalApply.showModal()">Apply</button>
-                <a href="#programs-info" class="btn btn-outline btn-accent">Learn More</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="inline-block">
-          <div class="class-card card">
-            <figure>
-              <img src="/img/angamardana2-card.avif" alt="Angamardana" />
-            </figure>
-            <div class="card-body p-4">
-              <h2 class="card-title">Angamardana</h2>
-              <p>(3 sessions) March 5-8 10:00-13:30 UTC</p>
-              <p>
-                <a href="https://maps.app.goo.gl/rq1rjnd7psr4oNZh6" class="link" target="_blank">
-                  Unnamed Road, Lybokhora, Lviv Oblast, Ukraine, 82633
-                </a>
-              </p>
-              <p>
-                <b>$ 250</b>
-                , incl. online support
-              </p>
-              <div class="card-actions justify-start">
-                <button class="btn btn-accent" onclick="modalApply.showModal()">Apply</button>
-                <a href="#programs-info" class="btn btn-outline btn-accent">Learn More</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="inline-block">
-          <div class="class-card card">
-            <figure>
-              <img src="/img/yogasanas2-card.avif" alt="Yogasanas" />
-            </figure>
-            <div class="card-body p-4">
-              <h2 class="card-title">Yogasanas</h2>
-              <p>(4 sessions) March 11-15 10:00-13:00 UTC</p>
-              <p>
-                <a href="https://maps.app.goo.gl/rq1rjnd7psr4oNZh6" class="link" target="_blank">
-                  Unnamed Road, Lybokhora, Lviv Oblast, Ukraine, 82633
-                </a>
-              </p>
-              <p>
-                <b>$ 300</b>
-                , incl. online support
-              </p>
-              <div class="card-actions justify-start">
-                <button class="btn btn-accent" onclick="modalApply.showModal()">Apply</button>
-                <a href="#programs-info" class="btn btn-outline btn-accent">Learn More</a>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div id="programs-loading">Loading...</div>
       </div>
 
       <h1 class="pb-6 pt-12 text-5xl font-bold" id="programs-info">Our Programs</h1>
