--- a/src/index.html
+++ b/src/index.html
@@ -126,9 +126,9 @@
       </p>
     </div>
 
-    <div class="bg-base-100 px-6 py-12">
-      <h1 class="pb-6 text-5xl font-bold" id="schedule">Upcoming Programs</h1>
-      <div class="text-center" id="programs">
+    <div class="bg-base-100 py-12">
+      <h1 class="px-6 pb-6 text-5xl font-bold" id="schedule">Upcoming Programs</h1>
+      <div class="px-1 text-center" id="programs">
         <div id="programs-loading">Loading...</div>
       </div>
 
